# headless_scraper_rust

./: Cargo.toml  example.html  reviews.csv
src/: lib.rs  main.rs
