[package]
name = "headless_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = "1.0.4"
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
csv = "1.2.0"
serde = "1.0.152"
scraper = "0.14.0"